feat: Adiciona utilitários para validação de CNPJ, CPF e verificação numérica de strings.